[gd_scene load_steps=22 format=3 uid="uid://c57rwoxvhi15g"]

[ext_resource type="Script" path="res://scenes/game_object/naga_enemy/naga_enemy.gd" id="1_muntl"]
[ext_resource type="Resource" uid="uid://bou0vm26ctnkp" path="res://resources/enemies/naga/naga_black.tres" id="2_jewsc"]
[ext_resource type="PackedScene" uid="uid://dc3iq11ql08qr" path="res://scenes/component/status_effect_component.tscn" id="8_gx80k"]
[ext_resource type="PackedScene" uid="uid://b107ymbechs3d" path="res://scenes/component/health_component.tscn" id="8_xyopv"]
[ext_resource type="PackedScene" uid="uid://bhp76acdvk38j" path="res://scenes/component/vial_drop_component.tscn" id="9_2mrpx"]
[ext_resource type="PackedScene" uid="uid://bw4wna6pvviqs" path="res://scenes/component/velocity_component.tscn" id="10_8vugj"]
[ext_resource type="PackedScene" uid="uid://cpwyeh6ioddx6" path="res://scenes/component/hit_flash_component.tscn" id="11_u3qmc"]
[ext_resource type="Shader" path="res://scenes/vfx/whiten/whiten.gdshader" id="12_rawv7"]
[ext_resource type="PackedScene" uid="uid://gaalh2lv6ndo" path="res://scenes/component/devil_trigger_component.tscn" id="13_wujbv"]
[ext_resource type="PackedScene" uid="uid://ca5bd24uu40af" path="res://scenes/component/stagger_component.tscn" id="14_a2sfn"]
[ext_resource type="PackedScene" uid="uid://d32oj4so0hfj6" path="res://scenes/component/hurtbox_component.tscn" id="15_c26ij"]
[ext_resource type="Texture2D" uid="uid://dtoec7yqv3oam" path="res://assets/externals/naga-female-sheet-black/naga-female-sheet-black.png" id="18_2pqi1"]
[ext_resource type="PackedScene" uid="uid://bupu5dd5xxdoo" path="res://scenes/ui/status_container.tscn" id="18_jf7b5"]

[sub_resource type="Animation" id="Animation_fk36s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ggsc1"]
resource_name = "die"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.35, 0.4, 0.45, 0.55, 0.65, 0.75, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.85, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_grox5"]
resource_name = "idle"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_7k04w"]
resource_name = "walk"
length = 1.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ddy8"]
_data = {
"RESET": SubResource("Animation_fk36s"),
"die": SubResource("Animation_ggsc1"),
"idle": SubResource("Animation_grox5"),
"walk": SubResource("Animation_7k04w")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1u2g4"]
resource_local_to_scene = true
shader = ExtResource("12_rawv7")
shader_parameter/whiten = true
shader_parameter/mix_weight = 0.0
shader_parameter/alpha = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k6erg"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_1kmk6"]
radius = 7.0

[node name="NagaEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
platform_floor_layers = 4294967041
script = ExtResource("1_muntl")
deviation = ExtResource("2_jewsc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
libraries = {
"": SubResource("AnimationLibrary_8ddy8")
}

[node name="StatusEffectComponent" parent="." node_paths=PackedStringArray("status_container") instance=ExtResource("8_gx80k")]
status_container = NodePath("../StatusContainer")

[node name="HealthComponent" parent="." instance=ExtResource("8_xyopv")]
max_health = 60.0
prevent_queue_free = true

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_2mrpx")]
drop_percent = 1.0
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." node_paths=PackedStringArray("facing_node") instance=ExtResource("10_8vugj")]
max_speed = 35
acceleration = 15.0
facing_node = NodePath("../Visuals")
facing_flip = true

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("11_u3qmc")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_1u2g4")

[node name="DevilTriggerComponent" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("13_wujbv")]
velocity_component = NodePath("../VelocityComponent")

[node name="StaggerComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("14_a2sfn")]
damage_threshould = 20.0
health_component = NodePath("../HealthComponent")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component", "status_effect_component") instance=ExtResource("15_c26ij")]
health_component = NodePath("../HealthComponent")
status_effect_component = NodePath("../StatusEffectComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_k6erg")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("18_2pqi1")
offset = Vector2(-2, -30)
hframes = 11
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_1kmk6")

[node name="StatusContainer" parent="." instance=ExtResource("18_jf7b5")]
offset_left = 0.0
offset_top = -33.0
offset_right = 0.0
offset_bottom = -33.0
